--- a/t1.html
+++ b/t1.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Info</title>
+    <title>Document</title>
+    <style>
+        div {
+            background-color: rgb(154, 222, 239);
+        }
+    </style>
 </head>
 <body>
-    <h1>Devashish Botre</h1>
-    <h2>Batch</h2>
-    <p>2<sup>nd</sup>Year</p>
-    <h2>Branch</h2>
-    <p>IT</p>
-    <h2>Previous Studies</h2>
-    <h3>Primary</h3>
-    <p>Shangrila High School</p>
-    <h3>High School</h3>
-    <p>Yashoda High School</p>
-    <h3>Junior College</h3>
-    <p>Shivaji Science College</p>
-    <h2>Hobbies</h2>
-    <p>I like to play cricket. I also like to travel to different places</p>
+    <div>
+        <ul>
+            <li>Eswatini</li>
+            <li>Ecuador</li>
+            <li>Tanzania</li>
+            <li>Spain</li>
+            <li>Slovakia</li>
+            <li>Iraq</li>
+        </ul>
+    </div>
 </body>
 </html>
